Fix project image scaling
Was overflowing on mobile devices so constraints have been altered.

--- a/src/static/css/project-grid.css
+++ b/src/static/css/project-grid.css
@@ -2,7 +2,8 @@
     margin: 1em auto;
     padding: 0;
     display:grid;
-    grid-template-columns: repeat(auto-fill, minmax(450px, auto));
+    grid-template-columns: repeat(auto-fill, minmax(auto, 450px));
+    justify-content: center;
     grid-column-gap: 0.5em;
     max-width: 1000px;
     list-style: none;
