--- a/src/static/css/project.css
+++ b/src/static/css/project.css
@@ -1,4 +1,5 @@
 #project-preview {
+    width: 100%;
     max-width: 750px;
 }
 
